# script

./: .gitignore
bash/: workspace-switch
c/Examples/makeExp/: hello.c  helloan.c  makefile
c/stm32f4-board/Axel/: Axel.elf  Axel.hex  Axel.sublime-project  Axel.sublime-workspace  Makefile  main.c
c/stm32f4-board/CLion/Axel/: Axel.sublime-workspace  CMakeLists.txt  main.c  main.h
c/stm32f4-board/CLion/Test/: CMakeLists.txt
java/Accelerometer/: pom.xml
java/Accelerometer/src/main/java/: Axelerometer.sublime-project  Axelerometer.sublime-workspace  Coordinates.java  Main.java
